--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <version.com.google.guava>13.0.1</version.com.google.guava>
         <version.org.apache.commons-collections>3.2.1</version.org.apache.commons-collections>
         <version.org.apache.commons-lang>2.6</version.org.apache.commons-lang>
+        <version.org.apache.log4j>1.2.17</version.org.apache.log4j>
         <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
         <version.org.apache.velocity>1.6.3</version.org.apache.velocity>
         <version.org.apache.velocity-tool>2.0</version.org.apache.velocity-tool>
@@ -68,7 +69,6 @@
         <version.org.jboss.jboss-common-core>2.2.17.GA</version.org.jboss.jboss-common-core>
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
-        <version.log4j>1.2.17</version.log4j>
         <version.org.picketlink>2.1.1.Final</version.org.picketlink>
         <version.org.picketlink.consolidated.social>2.0.0.Beta1</version.org.picketlink.consolidated.social>
         <version.javassist>3.15.0-GA</version.javassist>
@@ -828,7 +828,7 @@
             <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
-                <version>${version.log4j}</version>
+                <version>${version.org.apache.log4j}</version>
             </dependency>
 
 
