[CAPEDWARF-189]; initial SQL support.

--- a/bytecode/pom.xml
+++ b/bytecode/pom.xml
@@ -107,6 +107,11 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-sql</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-tasks</artifactId>
         </dependency>
 
