--- a/bytecode/pom.xml
+++ b/bytecode/pom.xml
@@ -82,6 +82,11 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-modules</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-multitenancy</artifactId>
         </dependency>
 
