CAPEDWARF-197 Upgrade PicketLink

--- a/users/pom.xml
+++ b/users/pom.xml
@@ -51,7 +51,7 @@
 
         <dependency>
             <groupId>org.picketlink</groupId>
-            <artifactId>picketlink-consolidated-social</artifactId>
+            <artifactId>picketlink-social</artifactId>
         </dependency>
 
         <dependency>
