--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,8 @@
         <version.org.jboss.jboss-common-core>2.2.17.GA</version.org.jboss.jboss-common-core>
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
-        <version.org.picketlink>2.1.1.Final</version.org.picketlink>
-        <version.org.picketlink.consolidated.social>2.0.0.Beta1</version.org.picketlink.consolidated.social>
+        <version.org.picketlink>2.1.8.Final</version.org.picketlink>
+        <version.org.picketlink.social>2.5.2.Final</version.org.picketlink.social>
         <version.javassist>3.18.1-GA</version.javassist>
         <version.javax.jpa2>1.0.1.Final</version.javax.jpa2>
         <version.javax.mail>1.4.4</version.javax.mail>
@@ -468,8 +468,8 @@
 
             <dependency>
                 <groupId>org.picketlink</groupId>
-                <artifactId>picketlink-consolidated-social</artifactId>
-                <version>${version.org.picketlink.consolidated.social}</version>
+                <artifactId>picketlink-social</artifactId>
+                <version>${version.org.picketlink.social}</version>
             </dependency>
 
             <dependency>
