--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         <version.org.jboss.capedwarf.shared>1.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
         <!-- External -->
         <version.cdi.api>1.0-SP4</version.cdi.api>
-        <version.com.google.gae.api>1.8.5</version.com.google.gae.api>
+        <version.com.google.gae.api>1.8.6</version.com.google.gae.api>
         <version.com.google.guava>14.0.1</version.com.google.guava>
         <version.org.apache.commons-collections>3.2.1</version.org.apache.commons-collections>
         <version.org.apache.commons-lang>2.6</version.org.apache.commons-lang>
@@ -77,7 +77,8 @@
         <version.javassist>3.18.1-GA</version.javassist>
         <version.javax.jpa2>1.0.1.Final</version.javax.jpa2>
         <version.javax.mail>1.4.4</version.javax.mail>
-        <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
+        <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.0.Final
+        </version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
         <version.org.hibernate.search>4.3.0.Final</version.org.hibernate.search>
         <version.org.marshalling>1.3.16.GA</version.org.marshalling>
         <version.org.infinispan>5.3.0.Final</version.org.infinispan>
@@ -113,6 +114,7 @@
         <version.org.jboss.resteasy>2.3.5.Final</version.org.jboss.resteasy>
         <!-- Build configuration -->
         <version.datanucleus.plugin>3.1.2</version.datanucleus.plugin>
+        <version.shade.plugin>2.1</version.shade.plugin>
         <version.surefire.plugin>2.12.4</version.surefire.plugin>
         <!-- Compiler configuration -->
         <maven.compiler.source>1.7</maven.compiler.source>
@@ -175,35 +177,52 @@
             </plugin>
         </plugins>
         <pluginManagement>
-        <plugins>
-         <!-- So m2e doesn't throw errors for features it doesn't support in the POM -->
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
+            <plugins>
+                <!-- So m2e doesn't throw errors for features it doesn't support in the POM -->
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-compiler-plugin</artifactId>
+                                        <versionRange>[1.0.0,)</versionRange>
+                                        <goals>
+                                            <goal>check</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <execute/>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <versionRange>[1.0.0,)</versionRange>
-                    <goals>
-                      <goal>check</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <execute />
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>${version.shade.plugin}</version>
+                    <executions>
+                        <execution>
+                            <id>default</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>shade</goal>
+                            </goals>
+                            <configuration>
+                                <createSourcesJar>true</createSourcesJar>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
     </build>
 
     <repositories>
@@ -317,6 +336,12 @@
             <dependency>
                 <groupId>org.jboss.capedwarf.blue</groupId>
                 <artifactId>capedwarf-environment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.capedwarf.blue</groupId>
+                <artifactId>capedwarf-endpoints</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
