Use mvn central MapReduce.

--- a/cluster-tests/pom.xml
+++ b/cluster-tests/pom.xml
@@ -81,9 +81,20 @@
         <!-- MapReduce libs -->
 
         <dependency>
-            <groupId>com.google.appengine</groupId>
-            <artifactId>appengine-mapper</artifactId>
+            <groupId>com.google.appengine.tools</groupId>
+            <artifactId>appengine-mapreduce</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.appengine.tools</groupId>
+            <artifactId>appengine-pipeline</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.appengine.tools</groupId>
+            <artifactId>appengine-gcs-client</artifactId>
         </dependency>
 
         <dependency>
