--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,9 @@
         <version.jboss.maven.transformer>1.0.0.Beta5</version.jboss.maven.transformer>
         <version.jboss.maven.arquillian>1.0.0.Alpha1</version.jboss.maven.arquillian>
         <!-- Testing - MapReduce -->
-        <version.com.google.gae.mapper>r452</version.com.google.gae.mapper>
+        <version.com.google.gae.mapper>0.2</version.com.google.gae.mapper>
+        <version.com.google.gae.pipeline>0.2</version.com.google.gae.pipeline>
+        <version.com.google.gae.gcs>0.3.2</version.com.google.gae.gcs>
         <version.charts4j>1.3</version.charts4j>
         <version.commons-logging>1.1.1</version.commons-logging>
         <version.org.json>20090211</version.org.json>
@@ -844,9 +846,21 @@
             <!-- Testing MapReduce -->
 
             <dependency>
-                <groupId>com.google.appengine</groupId>
-                <artifactId>appengine-mapper</artifactId>
+                <groupId>com.google.appengine.tools</groupId>
+                <artifactId>appengine-mapreduce</artifactId>
                 <version>${version.com.google.gae.mapper}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.tools</groupId>
+                <artifactId>appengine-pipeline</artifactId>
+                <version>${version.com.google.gae.pipeline}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.appengine.tools</groupId>
+                <artifactId>appengine-gcs-client</artifactId>
+                <version>${version.com.google.gae.gcs}</version>
             </dependency>
 
             <dependency>
