Add test scope.

--- a/cluster-tests/pom.xml
+++ b/cluster-tests/pom.xml
@@ -95,6 +95,7 @@
         <dependency>
             <groupId>com.google.appengine.tools</groupId>
             <artifactId>appengine-gcs-client</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
