--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -163,6 +163,7 @@
         <dependency>
             <groupId>com.google.appengine.tools</groupId>
             <artifactId>appengine-gcs-client</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
