--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
         <version.org.jboss.resteasy>2.3.5.Final</version.org.jboss.resteasy>
         <!-- Build configuration -->
         <version.datanucleus.plugin>3.1.2</version.datanucleus.plugin>
+        <version.dependency.plugin>2.8</version.dependency.plugin>
         <version.shade.plugin>2.1</version.shade.plugin>
         <version.surefire.plugin>2.12.4</version.surefire.plugin>
         <!-- Compiler configuration -->
