--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
         <version.junit>4.11</version.junit>
         <version.arquillian>1.1.1.Final</version.arquillian>
         <version.jboss.wildfly>8.0.0.Beta2-SNAPSHOT</version.jboss.wildfly>
-        <version.org.jboss.xnio>3.1.0.CR7</version.org.jboss.xnio>
+        <version.org.jboss.xnio>3.2.0.Beta3</version.org.jboss.xnio>
         <version.arquillian.gae>1.0.0.Beta7</version.arquillian.gae>
         <version.jboss.maven.transformer>1.0.0.Beta5</version.jboss.maven.transformer>
         <version.jboss.maven.arquillian>1.0.0.Alpha1</version.jboss.maven.arquillian>
