Add GQL4J. Allow string queries from console.

--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -85,6 +85,11 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-gql4j</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-log</artifactId>
         </dependency>
 
