--- a/pom.xml
+++ b/pom.xml
@@ -77,11 +77,13 @@
         <version.javassist>3.18.1-GA</version.javassist>
         <version.javax.jpa2>1.0.1.Final</version.javax.jpa2>
         <version.javax.mail>1.4.4</version.javax.mail>
+        <version.org.jboss.spec.javax.ejb>1.0.2.Final</version.org.jboss.spec.javax.ejb>
         <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
         <version.org.jboss.spec.javax.websockets>1.0.0.Final</version.org.jboss.spec.javax.websockets>
         <version.org.hibernate.search>4.5.0.Alpha2</version.org.hibernate.search>
         <version.org.marshalling>1.4.2.Final</version.org.marshalling>
         <version.org.infinispan>6.0.1.Final</version.org.infinispan>
+        <version.org.wildfly.mail-ra>1.0.0.Alpha1</version.org.wildfly.mail-ra>
         <version.net.jcip>1.0</version.net.jcip>
         <version.metainf>1.1</version.metainf>
         <version.org.apache.httpcomponents>4.2.1</version.org.apache.httpcomponents>
@@ -743,6 +745,20 @@
                 <artifactId>mail</artifactId>
                 <version>${version.javax.mail}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.wildfly</groupId>
+                <artifactId>mail-ra-api</artifactId>
+                <version>${version.org.wildfly.mail-ra}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.spec.javax.ejb</groupId>
+                <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+                <version>${version.org.jboss.spec.javax.ejb}</version>
+                <scope>provided</scope>
+            </dependency>
+
 
             <dependency>
                 <groupId>org.jboss.spec.javax.jms</groupId>
