--- a/pom.xml
+++ b/pom.xml
@@ -107,8 +107,8 @@
         <version.jboss.maven.transformer>1.0.0.Beta5</version.jboss.maven.transformer>
         <version.jboss.maven.arquillian>1.0.0.Alpha1</version.jboss.maven.arquillian>
         <!-- Testing - MapReduce -->
-        <version.com.google.gae.mapper>0.2</version.com.google.gae.mapper>
-        <version.com.google.gae.pipeline>0.2</version.com.google.gae.pipeline>
+        <version.com.google.gae.mapreduce>0.3</version.com.google.gae.mapreduce>
+        <version.com.google.gae.pipeline>0.2.4</version.com.google.gae.pipeline>
         <version.com.google.gae.gcs>0.3.2</version.com.google.gae.gcs>
         <version.charts4j>1.3</version.charts4j>
         <version.commons-logging>1.1.1</version.commons-logging>
@@ -910,7 +910,7 @@
             <dependency>
                 <groupId>com.google.appengine.tools</groupId>
                 <artifactId>appengine-mapreduce</artifactId>
-                <version>${version.com.google.gae.mapper}</version>
+                <version>${version.com.google.gae.mapreduce}</version>
             </dependency>
 
             <dependency>
