--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
         <version.com.google.gae.mapreduce>0.3</version.com.google.gae.mapreduce>
         <version.com.google.gae.pipeline>0.2.4</version.com.google.gae.pipeline>
         <version.com.google.gae.gcs>0.3.2</version.com.google.gae.gcs>
+        <version.fastutil>6.5.12</version.fastutil>
         <version.charts4j>1.3</version.charts4j>
         <version.commons-logging>1.1.1</version.commons-logging>
         <version.org.json>20090211</version.org.json>
@@ -923,6 +924,12 @@
                 <groupId>com.google.appengine.tools</groupId>
                 <artifactId>appengine-gcs-client</artifactId>
                 <version>${version.com.google.gae.gcs}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>it.unimi.dsi</groupId>
+                <artifactId>fastutil</artifactId>
+                <version>${version.fastutil}</version>
             </dependency>
 
             <dependency>
