--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <!-- External -->
         <version.cdi.api>1.0-SP4</version.cdi.api>
         <version.com.google.gae.api>1.8.9</version.com.google.gae.api>
-        <version.com.google.guava>15.0</version.com.google.guava>
+        <version.com.google.guava>16.0.1</version.com.google.guava>
         <version.org.apache.commons-collections>3.2.1</version.org.apache.commons-collections>
         <version.org.apache.commons-lang>2.6</version.org.apache.commons-lang>
         <version.org.apache.log4j>1.2.17</version.org.apache.log4j>
@@ -66,11 +66,11 @@
         <version.org.apache.velocity>1.6.3</version.org.apache.velocity>
         <version.org.apache.velocity-tool>2.0</version.org.apache.velocity-tool>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
-        <version.org.jboss.logging>3.1.3.GA</version.org.jboss.logging>
+        <version.org.jboss.logging>3.1.4.GA</version.org.jboss.logging>
         <version.org.jboss.modules.jboss-modules>1.3.0.Final</version.org.jboss.modules.jboss-modules>
         <version.org.jboss.vfs>3.2.2.Final</version.org.jboss.vfs>
         <version.org.jboss.jboss-common-core>2.2.22.GA</version.org.jboss.jboss-common-core>
-        <version.org.jboss.spec.javax.servlet.api>1.0.0.Beta1</version.org.jboss.spec.javax.servlet.api>
+        <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
         <version.org.picketlink>2.1.10.Final</version.org.picketlink>
         <version.org.picketlink.social>2.5.2.Final</version.org.picketlink.social>
@@ -80,16 +80,16 @@
         <version.org.jboss.spec.javax.ejb>1.0.2.Final</version.org.jboss.spec.javax.ejb>
         <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
         <version.org.jboss.spec.javax.websockets>1.0.0.Final</version.org.jboss.spec.javax.websockets>
-        <version.org.hibernate.search>4.5.0.Alpha2</version.org.hibernate.search>
+        <version.org.hibernate.search>4.5.0.Final</version.org.hibernate.search>
         <version.org.marshalling>1.4.2.Final</version.org.marshalling>
         <version.org.infinispan>6.0.1.Final</version.org.infinispan>
-        <version.org.wildfly.mail-ra>1.0.0.Alpha1</version.org.wildfly.mail-ra>
+        <version.org.wildfly.mail-ra>1.0.0.Alpha2</version.org.wildfly.mail-ra>
         <version.net.jcip>1.0</version.net.jcip>
         <version.metainf>1.1</version.metainf>
         <version.org.apache.httpcomponents>4.2.1</version.org.apache.httpcomponents>
         <version.org.xerial.sqlite>3.7.2</version.org.xerial.sqlite>
         <version.org.codehaus.jackson>1.9.12</version.org.codehaus.jackson>
-        <version.io.undertow>1.0.0.Beta30</version.io.undertow>
+        <version.io.undertow>1.0.0.Final</version.io.undertow>
         <!-- Antlr -->
         <version.antlr>3.1</version.antlr>
         <version.antlr.plugin>3.1.3-1</version.antlr.plugin>
@@ -101,8 +101,8 @@
         <!-- Testing -->
         <version.junit>4.11</version.junit>
         <version.arquillian>1.1.1.Final</version.arquillian>
-        <version.jboss.wildfly>8.0.0.CR1</version.jboss.wildfly>
-        <version.org.jboss.xnio>3.2.0.Beta4</version.org.jboss.xnio>
+        <version.jboss.wildfly>8.0.0.Final</version.jboss.wildfly>
+        <version.org.jboss.xnio>3.2.0.Final</version.org.jboss.xnio>
         <version.arquillian.gae>1.0.0.Beta7</version.arquillian.gae>
         <version.jboss.maven.transformer>1.0.0.Beta5</version.jboss.maven.transformer>
         <version.jboss.maven.arquillian>1.0.0.Alpha1</version.jboss.maven.arquillian>
