--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,8 @@
         <!-- External -->
         <version.cdi.api>1.0-SP4</version.cdi.api>
         <version.com.google.gae.api>1.8.9</version.com.google.gae.api>
-        <version.com.google.guava>16.0.1</version.com.google.guava>
+        <!-- We do not use 16.0.1, due to MapReduce, which needs 15.x -->
+        <version.com.google.guava>15.0</version.com.google.guava>
         <version.org.apache.commons-collections>3.2.1</version.org.apache.commons-collections>
         <version.org.apache.commons-lang>2.6</version.org.apache.commons-lang>
         <version.org.apache.log4j>1.2.17</version.org.apache.log4j>
@@ -107,8 +108,8 @@
         <version.jboss.maven.transformer>1.0.0.Beta5</version.jboss.maven.transformer>
         <version.jboss.maven.arquillian>1.0.0.Alpha1</version.jboss.maven.arquillian>
         <!-- Testing - MapReduce -->
-        <version.com.google.gae.mapreduce>0.3</version.com.google.gae.mapreduce>
-        <version.com.google.gae.pipeline>0.2.4</version.com.google.gae.pipeline>
+        <version.com.google.gae.mapreduce>0.4</version.com.google.gae.mapreduce>
+        <version.com.google.gae.pipeline>0.2.6</version.com.google.gae.pipeline>
         <version.com.google.gae.gcs>0.3.2</version.com.google.gae.gcs>
         <version.fastutil>6.5.12</version.fastutil>
         <version.charts4j>1.3</version.charts4j>
