CAPEDWARF-233 Implement OAuth Login (OpenID connect) instead of OpenId

--- a/pom.xml
+++ b/pom.xml
@@ -1046,6 +1046,12 @@
 
             <dependency>
                 <groupId>org.jboss.resteasy</groupId>
+                <artifactId>jose-jwt</artifactId>
+                <version>${version.org.jboss.resteasy}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.resteasy</groupId>
                 <artifactId>resteasy-client</artifactId>
                 <version>${version.org.jboss.resteasy}</version>
             </dependency>
