--- a/pom.xml
+++ b/pom.xml
@@ -110,15 +110,19 @@
         <version.jboss.maven.transformer>1.0.0.Beta5</version.jboss.maven.transformer>
         <version.jboss.maven.arquillian>1.0.0.Alpha1</version.jboss.maven.arquillian>
         <!-- Testing - MapReduce -->
-        <version.com.google.gae.mapreduce>0.5</version.com.google.gae.mapreduce>
-        <version.com.google.gae.pipeline>0.2.7</version.com.google.gae.pipeline>
-        <version.com.google.gae.gcs>0.4</version.com.google.gae.gcs>
+        <version.com.google.gae.mapreduce>0.7.1</version.com.google.gae.mapreduce>
+        <version.com.google.gae.pipeline>0.2.8</version.com.google.gae.pipeline>
+        <version.com.google.gae.gcs>0.3.13</version.com.google.gae.gcs>
+        <version.com.google.api-client>1.17.0-rc</version.com.google.api-client>
+        <version.com.google.http-client>1.17.0-rc</version.com.google.http-client>
+        <version.com.google.api-services>v1-rev1-1.18.0-rc</version.com.google.api-services>
+        <version.joda>2.3</version.joda>
+        <version.com.fasterxml.jackson-core>2.1.3</version.com.fasterxml.jackson-core>
         <version.fastutil>6.5.12</version.fastutil>
         <version.charts4j>1.3</version.charts4j>
         <version.commons-logging>1.1.1</version.commons-logging>
         <version.org.json>20090211</version.org.json>
         <!-- Testing Iddx -->
-        <version.com.google.api-client>1.11.0-beta</version.com.google.api-client>
         <version.com.google.api-services-bigquery>v2-rev142-1.18.0-rc</version.com.google.api-services-bigquery>
         <!-- Testing Objectify -->
         <version.objectify>4.0rc2</version.objectify>
@@ -960,6 +964,30 @@
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>${version.org.apache.log4j}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${version.joda}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.http-client</groupId>
+                <artifactId>google-http-client-jackson2</artifactId>
+                <version>${version.com.google.http-client}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.apis</groupId>
+                <artifactId>google-api-services-storage</artifactId>
+                <version>${version.com.google.api-services}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${version.com.fasterxml.jackson-core}</version>
             </dependency>
 
             <!-- Testing Iddx -->
